--- a/WebSiteClothesStore/Views/Card/ShowCardProduct.cshtml
+++ b/WebSiteClothesStore/Views/Card/ShowCardProduct.cshtml
@@ -239,13 +239,18 @@
                         </tr>
                         <tr>
                             <td>Email</td>
-                            <td>@Html.TextBox("Email")</td>
-                            <span style="color:red; display:block;" id="TB_Email"></span>
+                            <td>@Html.TextBox("Email")
+                                <span style="color:red; display:block;" id="TB_Email"></span>
+                            </td>
+                            
                         </tr>
                         <tr>
                             <td>Số điện thoại</td>
-                            <td>@Html.TextBox("SDT")</td>
-                            <span style="color:red; display:block;" id="TB_SDT"></span>
+                            <td>
+                                @Html.TextBox("SDT")
+                                                        <span style="color:red; display:block;" id="TB_SDT"></span>
+                                                    </td>
+                           
                         </tr>
                         <tr style="display:none;">
 
