--- a/WebSiteClothesStore/Views/HomeLayout/HomeLayout.cshtml
+++ b/WebSiteClothesStore/Views/HomeLayout/HomeLayout.cshtml
@@ -35,13 +35,13 @@
             </ol>
             <div class="carousel-inner">
                 <div class="item active">
-                    <img src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/1.jpg" alt="Thiết kế 1">
+                    <img width="100%" src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/1.jpg" alt="Thiết kế 1">
                 </div>
                 <div class="item">
-                    <img src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/2.jpg" alt="Thiết kế 2">
+                    <img width="100%"  src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/2.jpg" alt="Thiết kế 2">
                 </div>
                 <div class="item">
-                    <img src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/3.jpg" alt="Thiết kế 3">
+                    <img width="100%"  src="http://hocwebgiare.com/thiet_ke_web_chuan_demo/slide_banner/images/3.jpg" alt="Thiết kế 3">
                 </div>
             </div> <a class="left carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a> <a class="right carousel-control" href="http://hocwebgiare.com/#myCarousel" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
         </div>
