--- a/WebSiteClothesStore/Views/HomeLayout/ProductLayout.cshtml
+++ b/WebSiteClothesStore/Views/HomeLayout/ProductLayout.cshtml
@@ -148,4 +148,7 @@
                     color: white;
                     background: #f00;
                 }
+    .container-products{
+        height:1000px;
+    }
 </style>
