--- a/WebSiteClothesStore/Views/HomeLayout/ProductLayoutAdmin.cshtml
+++ b/WebSiteClothesStore/Views/HomeLayout/ProductLayoutAdmin.cshtml
@@ -237,6 +237,9 @@
         background-color: orange;
         color: white;
     }
+    .container{
+        text-align:center;
+    }
 </style>
 
 <script>
