--- a/WebSiteClothesStore/Views/Product/ProductFollowIDCategory.cshtml
+++ b/WebSiteClothesStore/Views/Product/ProductFollowIDCategory.cshtml
@@ -66,7 +66,9 @@
                             </ins>
                         </span>
                     }
-
+                    <div class="box-text box-text-products text-center grid-style-2">
+                        <div class="title-wrapper"><p class="name product-title" style="color:black; font-size:30px; font-weight:700;">@item.TenSP</p></div>
+                    </div><!-- box-text -->
                 </div><!-- box-text -->
             </div>
         </a>
