--- a/WebSiteClothesStore/Views/Home/HeaderOfLayoutPartial.cshtml
+++ b/WebSiteClothesStore/Views/Home/HeaderOfLayoutPartial.cshtml
@@ -42,7 +42,7 @@
                         ThanhVien tv = (ThanhVien)Session["TaiKhoan"];
                         if (tv != null)
                         {
-                            <li>Chào @tv.HoTen </li>
+                            <li style="color: white">Chào @tv.HoTen </li>
                             @Html.ActionLink(" Đăng xuất", "DangXuat", "Home");
                         }
                         else
@@ -670,7 +670,7 @@
     }
     var formatEmail = /^([\w-\.]+)@@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.)|(([\w-]+\.)+))([a-zA-Z]{2,4}|[0-9]{1,3})(\]?)$/;
    
-    }
+    
     $("#btnRegister").click(function () {
         var matKhau = $("#matkhau").val();
         var reMatKhau = $("#reMatKhau").val();
