--- a/WebSiteClothesStore/Views/Product/ShowAllProduct.cshtml
+++ b/WebSiteClothesStore/Views/Product/ShowAllProduct.cshtml
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="box-text box-text-products text-center grid-style-2">
-                        <div class="title-wrapper"><p class="name product-title"><a href="">@item.TenSP</a></p></div>
+                        <div class="title-wrapper"><p class="name product-title"style="color:black; font-size:30px; font-weight:700;">@item.TenSP</p></div>
                     </div><!-- box-text -->
                 </div>
             </div>
