--- a/WebSiteClothesStore/Views/SanPhamIndex/ViewPartialNewProducts.cshtml
+++ b/WebSiteClothesStore/Views/SanPhamIndex/ViewPartialNewProducts.cshtml
@@ -66,7 +66,7 @@
                     }
 
                     <div class="box-text box-text-products text-center grid-style-2">
-                        <div class="title-wrapper"><p class="name product-title">@item.TenSP</p></div>
+                        <div class="title-wrapper"><p class="name product-title" style="color:black; font-size:30px; font-weight:700;">@item.TenSP</p></div>
 
                     </div><!-- box-text -->
                 </div>
