--- a/WebSiteClothesStore/Views/TimKiem/KQTimKiem.cshtml
+++ b/WebSiteClothesStore/Views/TimKiem/KQTimKiem.cshtml
@@ -5,13 +5,7 @@
     Layout = "~/Views/HomeLayout/ProductLayout.cshtml";
 }
 <script src="~/Scripts/jquery.unobtrusive-ajax.min.js"></script>
-@using (Ajax.BeginForm("KQTimKiemPartial", "TimKiem", new AjaxOptions { HttpMethod="Post", @UpdateTargetId = "KQTimKiem", InsertionMode = InsertionMode.Replace }))
-{
-    <div class="searchForm">
-        <input type="text" class="txtTimKiem" name="tuKhoa" value="" placeholder="Nhập từ khóa cần tìm" />
-        <input type="submit" value="Tìm kiếm" style="color:black;font-weight:bold;" />
-    </div>
-}
+<p style="font-size:20px;">Kết quả tìm kiếm cho: </p> <span style="color:red; font-size:30px;">@ViewBag.TuKhoa</span>
 
 <div id="KQTimKiem">
     <div class="col-md-9 product">
@@ -75,7 +69,10 @@
                                     </ins>
                                 </span>
                             }
+                            <div class="box-text box-text-products text-center grid-style-2">
+                                <div class="title-wrapper"><p class="name product-title" style="color:black; font-size:30px; font-weight:700;">@item.TenSP</p></div>
 
+                            </div><!-- box-text -->
                         </div><!-- box-text -->
                     </div>
                 </a>
